--- a/assets/main/css/main.css
+++ b/assets/main/css/main.css
@@ -84,6 +84,8 @@
     width: 100%;
     height: 100vh;
     background: url('../img/home_bg.png') no-repeat;
+    background-size: 100%;
+
 }
 
 .my_nav {
@@ -156,6 +158,14 @@
 .planet_2 {
     position: absolute;
     bottom: 0;
+}
+
+.progress {
+    background: url("../img/progress.png") no-repeat center;
+    background-size: 100%;
+    height: 100vh;
+    width: 100%;    
+    opacity: 0.9;
 }
 
 @media (max-width: 768px) {
